// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UtxoHttpService healthy state /utxo-by-addresses return UTxOs for a single address 1`] = `
Array [
  Array [
    Object {
      "address": "addr_test1qpcnmvyjmxmsm75f747u566gw7ewz4mesdw7yl278uf9r3f5l7d7dpx2ymfwlm3e56flupga8yamjr2kwdt7dw77ktyqqtx2r7",
      "index": 0,
      "txId": "19251f57476d7af2777252270413c01383d9503110a68b4fde1a239c119c4f5d",
    },
    Object {
      "address": "addr_test1qpcnmvyjmxmsm75f747u566gw7ewz4mesdw7yl278uf9r3f5l7d7dpx2ymfwlm3e56flupga8yamjr2kwdt7dw77ktyqqtx2r7",
      "value": Object {
        "coins": 1497246388n,
      },
    },
  ],
]
`;

exports[`UtxoHttpService healthy state /utxo-by-addresses return UTxOs for multiple addresses 1`] = `
Array [
  Array [
    Object {
      "address": "addr_test1qpcnmvyjmxmsm75f747u566gw7ewz4mesdw7yl278uf9r3f5l7d7dpx2ymfwlm3e56flupga8yamjr2kwdt7dw77ktyqqtx2r7",
      "index": 0,
      "txId": "19251f57476d7af2777252270413c01383d9503110a68b4fde1a239c119c4f5d",
    },
    Object {
      "address": "addr_test1qpcnmvyjmxmsm75f747u566gw7ewz4mesdw7yl278uf9r3f5l7d7dpx2ymfwlm3e56flupga8yamjr2kwdt7dw77ktyqqtx2r7",
      "value": Object {
        "coins": 1497246388n,
      },
    },
  ],
  Array [
    Object {
      "address": "addr_test1qp620qa3rqzd5fxj3hy4dughv7xx2dt9gu9de70jf8hagdcvmqt35f2psxv7ajj5jnh4ajlc752rert8f9msffxdl45qyjefw8",
      "index": 2,
      "txId": "a08e293256180196de69ff025321be2f7ce5911ce4e3a96406b7c62de0e19bb2",
    },
    Object {
      "address": "addr_test1qp620qa3rqzd5fxj3hy4dughv7xx2dt9gu9de70jf8hagdcvmqt35f2psxv7ajj5jnh4ajlc752rert8f9msffxdl45qyjefw8",
      "value": Object {
        "assets": Map {
          "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f" => 70n,
          "22c3b86a5b88a78b5de52f4aed2831d1483b3b7681f1ee2569538130cb6de817be83e93a5771e6c98ee305e1012bae70d9eb9dff70e2d71e4b611779" => 780407n,
        },
        "coins": 2000000n,
      },
    },
  ],
  Array [
    Object {
      "address": "addr_test1qryz24mkq35j8s67fdrm44pe8na7n3tqkmyzy3sgnjq3d7szlx56h6fkjl8y3p73zpyce04eku9w943rcr6rgznp8cwq2axy9q",
      "index": 3,
      "txId": "a08e293256180196de69ff025321be2f7ce5911ce4e3a96406b7c62de0e19bb2",
    },
    Object {
      "address": "addr_test1qryz24mkq35j8s67fdrm44pe8na7n3tqkmyzy3sgnjq3d7szlx56h6fkjl8y3p73zpyce04eku9w943rcr6rgznp8cwq2axy9q",
      "value": Object {
        "assets": Map {
          "22c3b86a5b88a78b5de52f4aed2831d1483b3b7681f1ee2569538130cb6de817be83e93a5771e6c98ee305e1012bae70d9eb9dff70e2d71e4b611779" => 11598880n,
        },
        "coins": 4854535n,
      },
    },
  ],
]
`;

exports[`UtxoHttpService healthy state /utxo-by-addresses returns UTxOs containing multiple assets 1`] = `
Array [
  Array [
    Object {
      "address": "addr_test1qp620qa3rqzd5fxj3hy4dughv7xx2dt9gu9de70jf8hagdcvmqt35f2psxv7ajj5jnh4ajlc752rert8f9msffxdl45qyjefw8",
      "index": 2,
      "txId": "a08e293256180196de69ff025321be2f7ce5911ce4e3a96406b7c62de0e19bb2",
    },
    Object {
      "address": "addr_test1qp620qa3rqzd5fxj3hy4dughv7xx2dt9gu9de70jf8hagdcvmqt35f2psxv7ajj5jnh4ajlc752rert8f9msffxdl45qyjefw8",
      "value": Object {
        "assets": Map {
          "126b8676446c84a5cd6e3259223b16a2314c5676b88ae1c1f8579a8f" => 70n,
          "22c3b86a5b88a78b5de52f4aed2831d1483b3b7681f1ee2569538130cb6de817be83e93a5771e6c98ee305e1012bae70d9eb9dff70e2d71e4b611779" => 780407n,
        },
        "coins": 2000000n,
      },
    },
  ],
  Array [
    Object {
      "address": "addr_test1qryz24mkq35j8s67fdrm44pe8na7n3tqkmyzy3sgnjq3d7szlx56h6fkjl8y3p73zpyce04eku9w943rcr6rgznp8cwq2axy9q",
      "index": 3,
      "txId": "a08e293256180196de69ff025321be2f7ce5911ce4e3a96406b7c62de0e19bb2",
    },
    Object {
      "address": "addr_test1qryz24mkq35j8s67fdrm44pe8na7n3tqkmyzy3sgnjq3d7szlx56h6fkjl8y3p73zpyce04eku9w943rcr6rgznp8cwq2axy9q",
      "value": Object {
        "assets": Map {
          "22c3b86a5b88a78b5de52f4aed2831d1483b3b7681f1ee2569538130cb6de817be83e93a5771e6c98ee305e1012bae70d9eb9dff70e2d71e4b611779" => 11598880n,
        },
        "coins": 4854535n,
      },
    },
  ],
]
`;
